--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "ethers": "^6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
