--- a/package.json
+++ b/package.json
@@ -1,33 +1,14 @@
+
 {
-  "name": "app",
-  "version": "0.1.0",
-  "private": true,
+  "name": "buchaphra-nft",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "compile": "hardhat compile",
-    "deploy": "hardhat run scripts/deploy.ts --network testnet"
+    "start": "next start"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.3.0",
-    "dotenv": "^16",
-    "ethers": "^6",
-    "next": "15.3.3",
-    "next-auth": "^4.24.11",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
-  "devDependencies": {
-    "@nomicfoundation/hardhat-ethers": "^3.0.9",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "hardhat": "^2.21.0",
-    "tailwindcss": "^4",
-    "ts-node": "^10.9.1",
-    "typescript": "^5"
+    "next": "^14.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
